; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress_http.c_http_incomplete_errorcb.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress_http.c_http_incomplete_errorcb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufferevent = type { i32 }

@BEV_EVENT_CONNECTED = common dso_local global i16 0, align 2
@BEV_EVENT_READING = common dso_local global i16 0, align 2
@BEV_EVENT_EOF = common dso_local global i16 0, align 2
@test_ok = common dso_local global i32 0, align 4
@exit_base = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bufferevent*, i16, i8*)* @http_incomplete_errorcb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @http_incomplete_errorcb(%struct.bufferevent* %0, i16 signext %1, i8* %2) #0 {
  %4 = alloca %struct.bufferevent*, align 8
  %5 = alloca i16, align 2
  %6 = alloca i8*, align 8
  store %struct.bufferevent* %0, %struct.bufferevent** %4, align 8
  store i16 %1, i16* %5, align 2
  store i8* %2, i8** %6, align 8
  %7 = load i16, i16* %5, align 2
  %8 = sext i16 %7 to i32
  %9 = load i16, i16* @BEV_EVENT_CONNECTED, align 2
  %10 = sext i16 %9 to i32
  %11 = and i32 %8, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  br label %30

14:                                               ; preds = %3
  %15 = load i16, i16* %5, align 2
  %16 = sext i16 %15 to i32
  %17 = load i16, i16* @BEV_EVENT_READING, align 2
  %18 = sext i16 %17 to i32
  %19 = load i16, i16* @BEV_EVENT_EOF, align 2
  %20 = sext i16 %19 to i32
  %21 = or i32 %18, %20
  %22 = icmp eq i32 %16, %21
  br i1 %22, label %23, label %26

23:                                               ; preds = %14
  %24 = load i32, i32* @test_ok, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* @test_ok, align 4
  br label %27

26:                                               ; preds = %14
  store i32 -2, i32* @test_ok, align 4
  br label %27

27:                                               ; preds = %26, %23
  %28 = load i32, i32* @exit_base, align 4
  %29 = call i32 @event_base_loopexit(i32 %28, i32* null)
  br label %30

30:                                               ; preds = %27, %13
  ret void
}

declare dso_local i32 @event_base_loopexit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
